k8s/platform/alb-to-nginx/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-to-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: alb-to-nginx
    app.kubernetes.io/part-of: platform-networking
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: ai-platform-dev-alb
    alb.ingress.kubernetes.io/group.name: ai-platform-dev
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/success-codes: "200-404"
    alb.ingress.kubernetes.io/tags: Project=ai-platform-kubernetes-aws,Environment=dev,Owner=Olatubosun-Enoch-David
    alb.ingress.kubernetes.io/load-balancer-attributes: routing.http2.enabled=true,idle_timeout.timeout_seconds=60
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingress-nginx-controller
                port:
                  name: http
